<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:scrollbars="none"
    tools:context=".presentation.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingStart="@dimen/sizeSmall"
            android:paddingTop="@dimen/sizeSmall"
            android:paddingEnd="@dimen/sizeSmall">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sizeSmall"
            android:background="@color/bg_service"
            android:orientation="vertical"
            android:paddingStart="@dimen/sizeSmall"
            android:paddingTop="@dimen/sizeSmall"
            android:paddingEnd="@dimen/sizeSmall">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titleService"
                android:textColor="@android:color/white"
                android:textSize="@dimen/fontLargeMore" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcvService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/item_service" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sizeSmall"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="@dimen/sizeSmallest">


            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_promotion" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/appCompatImageView2"
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.452"
                app:srcCompat="@drawable/ic_arrow" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/promotionTitle"
                android:textColor="#242455"
                android:textSize="@dimen/fontLarge"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/promotionContent"
                android:textColor="#999994"
                android:textSize="@dimen/fontNormal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/sizeSmall"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingStart="@dimen/sizeSmall"
            android:paddingEnd="@dimen/sizeSmallest">

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingTop="@dimen/sizeSmall"
                android:text="@string/titleHotKey"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcvHotKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sizeSmall"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/item_hot_key" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sizeSmallest"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingStart="@dimen/sizeSmall"
            android:paddingEnd="@dimen/sizeSmallest"
            android:paddingBottom="@dimen/sizeSmallest">

            <TextView
                android:id="@+id/textView4"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="@dimen/sizeSmall"
                android:text="@string/titleSignUpLogin"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/appCompatImageViewShop"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_login_shop" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_button"
                android:text="@string/btnRegister"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/fontLarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:layout_marginStart="@dimen/sizeSmall"
                android:background="@drawable/bg_button_login"
                android:text="@string/btnLogin"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/fontLarge"
                app:layout_constraintBottom_toBottomOf="@+id/btnRegister"
                app:layout_constraintStart_toEndOf="@+id/btnRegister"
                app:layout_constraintTop_toTopOf="@+id/btnRegister" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/sizeSmall"
            android:background="@color/bg_deal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/sizeSmall">

            <TextView
                android:id="@+id/textView5"
                style="@style/TextTitleH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/sizeSmall"
                android:text="@string/titleDeal"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sizeMedium"
                android:layout_marginEnd="@dimen/sizeMedium"
                android:background="@drawable/bg_deal"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:padding="@dimen/sizeMedium"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_book" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:padding="@dimen/sizeMedium"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_book_2" />

            </LinearLayout>


        </android.support.constraint.ConstraintLayout>


    </LinearLayout>
</ScrollView>